listado y alta de duenios

--- a/src/app/FrmMenuPrincipal.form
+++ b/src/app/FrmMenuPrincipal.form
@@ -36,6 +36,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Listado de due&#xf1;os"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="mitmListaDueniosActionPerformed"/>
+              </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
