--- a/src/app/FrmListaDuenios.form
+++ b/src/app/FrmListaDuenios.form
@@ -2,7 +2,7 @@
 
 <Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JInternalFrameFormInfo">
   <Properties>
-    <Property name="title" type="java.lang.String" value="Listado de estados"/>
+    <Property name="title" type="java.lang.String" value="Listado de due&#xf1;os"/>
     <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
       <Dimension value="[1038, 765]"/>
     </Property>
